fixed horizontal scrolling issue

--- a/assets/css/calendarstyle.css
+++ b/assets/css/calendarstyle.css
@@ -73,6 +73,3 @@ table {
   margin:2%;
 }
 
-.workstats-container{
-   padding: 20px;
-}
