--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 :root {
-  
+
 }
 
 h2{
@@ -7,7 +7,10 @@ h2{
 }
 a{
     font-size: larger;
-    
+}
+
+body{
+    overflow-x: hidden; 
 }
 
 header{
@@ -20,6 +23,10 @@ header{
     height: 30px;
 }
 
+.weekday{
+    min-height: 1000px;
+}
+
 .btn{
     margin: .5%;
     outline: auto;
@@ -27,7 +34,6 @@ header{
     outline-style: solid;
     outline-width: .07cm;
 }
-
 
 .row{
     font-size: larger;
@@ -45,13 +51,13 @@ header{
     font-size: 20px;
     font-weight: bold;
     min-height: 200px;
-    outline:auto;
+    outline: auto;
     outline-style: solid;
 }
 
 .list-group-item{
     min-height: 100px;
-    font-weight:300;
+    font-weight: 300;
     font-weight: bold;
 }
 
@@ -69,11 +75,18 @@ header{
 
 #workstats-container-2 {
     /* fill */
-width: 400px;
-height: 200px;
-margin: 50px;
-align-self: center;
+    width: 400px;
+    height: 200px;
+    margin: 50px;
+    align-self: center;
+}
 
+.workstats-container{
+    padding: 20px;
+}
+
+.weekschedule{
+    margin: auto;
 }
 
 #weekly-stats-sheet{
